_assets/stylesheets/base.scss
////////// colors //////////

$blue:      rgb(3,168,171);
$yellow:    rgb(255,189,27);
$green:     rgb(2,125,17);
$dark-gray: rgb(45,45,45);

////////// fonts //////////

@mixin embed-font($font-name, $font-filepath-and-name) {
  @font-face {
    font-family: $font-name;
      src: url(asset_path("fonts/"+$font-filepath-and-name+".eot")); /* IE9 Compat Modes */
      src: url(asset_path("fonts/"+$font-filepath-and-name+".eot?#iefix")) format('embedded-opentype'), /* IE6-IE8 */
           url(asset_path("fonts/"+$font-filepath-and-name+".woff")) format('woff'), /* Modern Browsers */
           url(asset_path("fonts/"+$font-filepath-and-name+".ttf"))  format('truetype'), /* Safari, Android, iOS */
           url(asset_path("fonts/"+$font-filepath-and-name+".svg#svgFontName")) format('svg'); /* Legacy iOS */
  }
}

@include embed-font("Graphik", "Graphik-Regular-Web");

////////// global mixins //////////

@mixin bg-fill-up($color) {
  transition: background-position .3s linear;
  @include background-image-gradient($color);
  @include background-size(100%, 210%);
  background-position: 0 -105%;
  background-repeat: repeat-x;

  &:hover {
    background-position: 0 0;

    a {
      color: $dark-gray;
    }
  }
}

@mixin text-square($color) {
  a {
    transition: color .8s linear;
    color: $color;
  }
}

/// bg-hover mixins ///

@mixin background-image-gradient($color) {
  background-image: -webkit-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: -moz-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: -o-linear-gradient($color, $color 50%, transparent 50%, transparent);
  background-image: linear-gradient($color, $color 50%, transparent 50%, transparent);
}

@mixin background-size($width, $height) {
  -webkit-background-size: $width $height;
  -moz-background-size: $width $height;
  -o-background-size: $width $height;
  background-size: $width $height;
}

////////// defaults //////////

html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p,
blockquote, pre, form, fieldset, table, th, td, canvas {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

body {
  background-color: $dark-gray;
  color: white;
  font-family: "Graphik";
  font-size: 112.5%; // 1em = 18px
}

#body {
  opacity: 0;
  transition: opacity .5s ease;
}

#loading {
  position: fixed;
  width: 60px;
  top: 50%;
  left: 50%;
  margin-top: -30px;
  margin-left: -30px;
  opacity: 1;
  transition: opacity .5s ease;
}

ul {
  list-style: none;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.15;
  margin-bottom: 1em;
}

p {
  line-height: 1.4;
  margin-bottom: 1em;
}

h2 {
  font-size: 1.77em;
}

h3 {
  font-size: 1.5em;
}

canvas {
  position: absolute;
  z-index: -1;
  // need this for squares to not be cut off at the edges
  top: -2px;
  left: -2px;
}

.canvas {
  position: relative;
}

a {
  text-decoration: none;
  color: inherit;
}

.no-touch a {
  &:hover {
    text-decoration: underline;
  }
}

@media screen and (max-width:1024px) {
  .main-content {
    font-size: 80%;
  }
}

@media screen and (max-width:640px) {
  .main-content {
    font-size: 75%;
  }
}

////////// classes //////////

.main-content {
  margin: 2em auto 0;
  width: 1024px;
  max-width: 88%;
  padding-bottom: 2em;
}

////////// squares ///////////

.square {
  overflow: hidden;
  position: relative;

  .text-content {
    padding: 1.4em;

    h2 {
      margin-bottom: .25em;
    }
  }

  &.image {
    padding: 1px;
  }

  &.text {
    &[data-color="blue"] {
      @include text-square($blue);
    }

    &[data-color="yellow"] {
      @include text-square($yellow);
    }

    &.half-image {
      background-position: 0 -45.2% !important;

      .image-container {
        position: absolute;
        bottom: 1px;
        right: 1px;
        left: 1px;

        img {
          width: inherit;
          max-width: 100%;
          height: auto;
        }
      }
    }

    @media screen and (max-width:800px) {
      &.half-image {
        background-position: 0 -105% !important;

        .image-container {
          display: none;
        }
      }
    }
  }
}

.no-touch .square {
  &.text[data-type="outlined"] {
    &[data-color="blue"] {
      @include bg-fill-up($blue);
    }
    
    &[data-color="yellow"] {
      @include bg-fill-up($yellow);
    }

    &.half-image:hover {
      background-position: 0 0 !important;
    }
  }
}

@media screen and (max-width:640px) {
  .square.text, .square.image, #social-icons {
    margin: 0 !important;
    left: 0 !important;
    top: 0 !important;
  }

  .square.spacer {
    margin-bottom: 1.5em !important;
  }
}

////////// free text //////////

.free {
  a {
    color: $yellow;
  }

  &.text {
    padding-right: 1.5em;
    margin-top: 4em;

    &.first {
      margin-top: 1em;
    }
  }
}

////////// icons //////////

.square.icon {
  img {
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 33%;
    opacity: 1;

    &.hover {
      opacity: 0;
    }
  }
}

.no-touch .square.icon {
  @include bg-fill-up($green);

  &:hover {
    img {
      opacity: 0;
      transition: opacity 1s linear;

      &.hover {
        opacity: 1;
      }
    }
  }

  img {
    &.hover {
      opacity: 0;
    }
  }
}

.icon-container {
  position: relative;
}

#social-icons {
  .phone {
    img {
      width: 20%;
    }
  }
}

////////// clearfix //////////

.clearfix:before, .clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

